8일차/service-blog.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-blog
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service-blog
  template:
    metadata:
      labels:
        app: service-blog
    spec:
      containers:
      - name: service-blog
        image: pia222/service-example-blog
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: service-blog
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: service-blog
