8일차/service-help.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-help
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service-help
  template:
    metadata:
      labels:
        app: service-help
    spec:
      containers:
      - name: service-help
        image: pia222/service-example-help
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: service-help
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: service-help
