8일차/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: default
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-example
            port:
              number: 80
  - host: example.com
    http:
      paths:
      - path: /blog
        pathType: Prefix
        backend:
          service:
            name: service-blog
            port:
              number: 80
      - path: /help
        pathType: Prefix
        backend:
          service:
            name: service-help
            port:
              number: 80
